--- a/index.html
+++ b/index.html
@@ -10,9 +10,43 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      coverpage: true
-    }
-  </script>
+      // 项目名称
+            name: 'Docsify-Guide',
+            // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
+            repo: 'https://github.com/YSGStudyHards',
+            // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
+            loadSidebar: true,
+            // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
+            loadNavbar: true,
+            // 封面支持，默认加载的是项目根目录下的_coverpage.md文件
+            coverpage: true,
+            // 最大支持渲染的标题层级
+            maxLevel: 5,
+            // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级（建议配置为2-4）
+            subMaxLevel: 4,
+            // 小屏设备下合并导航栏到侧边栏
+            mergeNavbar: true,
+        }
+    </script>
+    <script>
+        // 搜索配置(url：https://docsify.js.org/#/zh-cn/plugins?id=%e5%85%a8%e6%96%87%e6%90%9c%e7%b4%a2-search)
+        window.$docsify = {
+            search: {
+                maxAge: 86400000,// 过期时间，单位毫秒，默认一天
+                paths: auto,// 注意：仅适用于 paths: 'auto' 模式
+                placeholder: '搜索',
+                // 支持本地化
+                placeholder: {
+                    '/zh-cn/': '搜索',
+                    '/': 'Type to search'
+                },
+                noData: '找不到结果',
+                depth: 4,
+                hideOtherSidebarContent: false,
+                namespace: 'Docsify-Guide',
+            }
+        }
+    </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 </body>
 </html>
