--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script>
         window.$docsify = {
             // 项目名称
-            name: '联ban新人帮助文档',
+            name: '个人帮助文档',
             // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
             loadSidebar: true,
             // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
@@ -47,7 +47,7 @@
                 noData: '找不到结果',
                 depth: 4,
                 hideOtherSidebarContent: false,
-                namespace: 'Docsify-Guide',
+                namespace: '个人文档',
             }
         }
     </script>
