--- a/index.html
+++ b/index.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
-    <title>个人文档</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="description" content="Description">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <!-- 设置浏览器图标 -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <!-- 默认主题 -->
-    <link rel="stylesheet" href="//docs.66fk.cc/media/vue.css">
+    <meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <!-- 网站描述+关键字+作者 -->
+    <meta name="description" content="邓邓的个人wiki站，收集、整理、提炼所学的知识">
+    <meta name="keywords" content="wiki,docsify,音乐爱好者">
+    <meta name="author" content="xhhdd">
+    <title>邓邓的零食橱</title>
+    
+    <!-- docsify的主题样式 -->
+    <link rel="stylesheet" href="//vox.cab/npm/docsify/lib/themes/vue.css">
+    <!-- 侧边栏插件的样式 -->
+    <link rel="stylesheet" href="//vox.cab/npm/docsify-sidebar-collapse/dist/sidebar.min.css" />
 </head>
-
 <body>
-    <!-- 定义加载时候的动作 -->
-    <div id="app">加载中...</div>
+    <!-- 定义加载时的显示 -->
+    <div id="app">很快！等我一下！</div>
     <script>
         window.$docsify = {
-            // 项目名称
-            name: '个人帮助文档',
-            // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
+            //通用设置
+            // -----------------------------------------------------
+            // 加载自定义导航栏,需要目录下有_navbar.md文件
             loadNavbar: true,
-            // 封面支持，默认加载的是项目根目录下的_coverpage.md文件
+            // 开启侧边栏，需要目录下有_sidebar.md文件
+            loadSidebar: true,
+            // 读取md文件中最大几级目录
+            subMaxLevel: 2,
+            // 切换页面后跳回页面顶部
+            auto2top: true,
+            // 指定开始页
+            homepage: '_home.md',
+            //开启封面页，需要目录下有_coverpage.md文件
             coverpage: true,
-            // 最大支持渲染的标题层级
-            maxLevel: 5,
-            // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级（建议配置为2-4）
-            subMaxLevel: 4,
-            // 小屏设备下合并导航栏到侧边栏
+            // 侧边栏左侧的logo
+            logo: '',
+            // 侧边栏顶部的标题
+            name: '邓邓的零食橱',
+            // 点击标题后的跳转地址
+            nameLink: '/',
+            // 禁用emoji
+            noEmoji: true,
+            // 移动设备合并导航栏到侧边栏
             mergeNavbar: true,
+            // 加载_404.md
+            notFoundPage: true,
+            // 滚动到锚点是与顶部的距离
+            topMargin: 90,
+            //插件设置
+            // -----------------------------------------------------
             // 搜索配置
             search: {
                 maxAge: 86400000,
@@ -40,7 +60,22 @@
                 noData: '找不到结果',
                 depth: 4,
                 hideOtherSidebarContent: false,
-                namespace: '个人文档'
+                namespace: '邓邓的零食橱'
+            },
+            // 字数插件
+            count:{
+                countable: true,
+                position: 'top',
+                margin: '10px',
+                float: 'right',
+                fontsize:'0.9em',
+                color:'rgb(90,90,90)',
+                language:'chinese',
+                localization: {
+                    words: "",
+                    minute: ""
+                },
+                isExpected: true
             },
             // 分页导航插件
             pagination: {
@@ -49,20 +84,43 @@
                 crossChapter: true,
                 crossChapterText: true
             },
+            // 文本高亮
+            'flexible-alerts': {
+                style: 'flat',
+                note: {
+                    label: "信息"
+                },
+                tip: {
+                    label: "提示"
+                },
+                warning: {
+                    label: "注意"
+                },
+                attention: {
+                    label: "切记"
+                }
+            },
+            sidebarDisplayLevel: 2,
+            // 页脚信息插件
+            loadFooter: true,
+            loadFooter: '_footer.md'
         };
     </script>
     <!-- docsify的js依赖 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+    <script src="//vox.cab/npm/docsify/lib/docsify.min.js"></script>
+    <!-- 搜索 -->
+    <script src="//vox.cab/npm/docsify/lib/plugins/search.min.js"></script>
+    <!-- 图片放大缩小支持 -->
+    <script src="//vox.cab/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+    <!-- 字数插件 -->
+    <script src="https://vox.cab/npm/docsify-count@latest/dist/countable.min.js"></script>
     <!-- 分页导航 -->
     <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
-    <!-- emoji表情支持 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
-    <!-- 图片放大缩小支持 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-    <!-- 搜索功能支持 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-    <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
-    <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+    <!-- 文本高亮 -->
+    <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
+    <!-- 侧边栏扩展与折叠 -->
+    <script src="//vox.cab/npm/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
+    <!-- 页脚信息 -->
+    <script src="//vox.cab/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
 </body>
-
 </html>
