--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
         // 搜索配置(url：https://docsify.js.org/#/zh-cn/plugins?id=%e5%85%a8%e6%96%87%e6%90%9c%e7%b4%a2-search)
         window.$docsify = {
             search: {
-                maxAge: 86400000,
-                paths: 'auto',
+                maxAge: 86400000,// 过期时间，单位毫秒，默认一天
+                paths: auto,// 注意：仅适用于 paths: 'auto' 模式
                 placeholder: '搜索',
+                // 支持本地化
                 noData: '找不到结果',
-                depth: 2,
+                depth: 4,
                 hideOtherSidebarContent: false,
-                namespace: 'gerenwendang'
+                namespace: 'Docsify-Guide',
             }
         }
     </script>
