--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 noData: '找不到结果',
                 depth: 4,
                 hideOtherSidebarContent: false,
-                namespace: 'Docsify-Guide',
+                namespace: '个人文档',
             }
         }
     </script>
