--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
             subMaxLevel: 4,
             // 小屏设备下合并导航栏到侧边栏
             mergeNavbar: true,
-        }
-    </script>
-    <script>
-        // 搜索配置(url：https://docsify.js.org/#/zh-cn/plugins?id=%e5%85%a8%e6%96%87%e6%90%9c%e7%b4%a2-search)
-        window.$docsify = {
+            // 搜索插件
             search: {
                 maxAge: 86400000,// 过期时间，单位毫秒，默认一天
                 paths: auto,// 注意：仅适用于 paths: 'auto' 模式
@@ -48,7 +44,7 @@
                 depth: 4,
                 hideOtherSidebarContent: false,
                 namespace: '个人文档',
-            }
+            },
         }
     </script>
     <!-- docsify的js依赖 -->
