--- a/index.html
+++ b/index.html
@@ -34,12 +34,21 @@
             subMaxLevel: 4,
             // 小屏设备下合并导航栏到侧边栏
             mergeNavbar: true,
+            // 搜索插件
             search: {
                paths: 'auto',
                placeholder: '搜索',
                noData: '找不到结果',
                depth: 3,
                      },
+            // 字数统计
+            count:{
+              countable:true,
+              fontsize:'0.9em',
+              color:'rgb(90,90,90)',
+              language:'chinese'
+              },
+            
         }
     </script>
     <!-- docsify的js依赖 -->
@@ -52,7 +61,11 @@
     <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
     <!--在所有的代码块上添加一个简单的Click to copy按钮来允许用户从你的文档中轻易地复制代码-->
     <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+    <!-- 下一页插件 -->
     <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
+    <!-- 字数统计 -->
+    <script src="//unpkg.com/docsify-count/dist/countable.min.js"></script>
+
 </body>
 
 </html>
